cmake_minimum_required(VERSION 3.16)
project(LeetCode_CPP)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(004.median-of-two-sorted-arrays)
add_subdirectory(005.longest-palindromic-substring)
add_subdirectory(019.remove-nth-node-from-end-of-list)
add_subdirectory(021.merge-two-sorted-lists)
add_subdirectory(075.sort-colors)
add_subdirectory(141.linked-list-cycle)
add_subdirectory(206.reverse-linked-list)
add_subdirectory(300.longest-increasing-subsequence)
add_subdirectory(876.middle-of-the-linked-list)
add_subdirectory(1143.longest-common-subsequence)

add_subdirectory(offer.06)
add_subdirectory(offer.07)
add_subdirectory(offer.09)
add_subdirectory(offer.10.1)
add_subdirectory(offer.10.2)
add_subdirectory(offer.11)
add_subdirectory(offer.13)
add_subdirectory(offer.14.1)
add_subdirectory(offer.14.2)
add_subdirectory(offer.15)
add_subdirectory(offer.16)
add_subdirectory(offer.17)
add_subdirectory(offer.18)
add_subdirectory(offer.19)
add_subdirectory(offer.20)
add_subdirectory(offer.22)
add_subdirectory(offer.24)
add_subdirectory(offer.25)
add_subdirectory(offer.26)
add_subdirectory(offer.27)
add_subdirectory(offer.28)
add_subdirectory(offer.29)
add_subdirectory(offer.30)
add_subdirectory(offer.31)
add_subdirectory(offer.32)
add_subdirectory(offer.33)
add_subdirectory(offer.35)
add_subdirectory(offer.36)
add_subdirectory(offer.37)
add_subdirectory(offer.38)
add_subdirectory(offer.39)
add_subdirectory(offer.40)
add_subdirectory(offer.52)

add_executable(LeetCode_CPP main.cpp)